[gd_scene load_steps=7 format=3 uid="uid://dfbluo1xmfixj"]

[ext_resource type="Script" uid="uid://b5mg6f6s8ycym" path="res://src/map/dungeon_end_screen.gd" id="1_ggukl"]
[ext_resource type="FontVariation" uid="uid://cnjisphqjicqu" path="res://data/theme/fonts/suse_mono_bold.tres" id="2_l4alo"]
[ext_resource type="StyleBox" uid="uid://bhjtch4mfk4jc" path="res://data/theme/styleboxes/btn_opaque_normal.tres" id="3_yl6to"]
[ext_resource type="StyleBox" uid="uid://buhq36mq775hf" path="res://data/theme/styleboxes/btn_opaque_pressed.tres" id="4_4p1hx"]
[ext_resource type="StyleBox" uid="uid://1p4tyofjick6" path="res://data/theme/styleboxes/btn_opaque_hover.tres" id="5_cpwfd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eqnqw"]
bg_color = Color(1, 1, 1, 0.9607843)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12

[node name="DungeonEndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ggukl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="."]
modulate = Color(0.88, 0.42856, 0.1672, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -550.0
offset_top = -400.5
offset_right = 550.0
offset_bottom = 400.5
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_eqnqw")

[node name="Label" type="Label" parent="Panel/Header"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.18039216, 0.18039216, 0.18039216, 1)
theme_override_fonts/font = ExtResource("2_l4alo")
theme_override_font_sizes/font_size = 50
text = "MISSION ACCOMPLISHED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 56.0
offset_top = 109.5
offset_right = -56.0
offset_bottom = -39.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="GridContainer" type="GridContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 30
columns = 2

[node name="BitsLabel" type="Label" parent="Panel/VBox/GridContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l4alo")
theme_override_font_sizes/font_size = 50
text = "BITS FOUND"
vertical_alignment = 1

[node name="BitsValue" type="Label" parent="Panel/VBox/GridContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l4alo")
theme_override_font_sizes/font_size = 50
text = "800.0 Bts"
horizontal_alignment = 2
vertical_alignment = 1

[node name="XpLabel" type="Label" parent="Panel/VBox/GridContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l4alo")
theme_override_font_sizes/font_size = 50
text = "XP EARNED"
vertical_alignment = 1

[node name="XpValue" type="Label" parent="Panel/VBox/GridContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l4alo")
theme_override_font_sizes/font_size = 50
text = "2,750 XP"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ModLabel" type="Label" parent="Panel/VBox/GridContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l4alo")
theme_override_font_sizes/font_size = 50
text = "MODIFIER"
vertical_alignment = 1

[node name="ModValue" type="Label" parent="Panel/VBox/GridContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l4alo")
theme_override_font_sizes/font_size = 50
text = "100%"
horizontal_alignment = 2
vertical_alignment = 1

[node name="TotalBits" type="Label" parent="Panel/VBox/GridContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l4alo")
theme_override_font_sizes/font_size = 50
text = "TOTAL BITS"
vertical_alignment = 1

[node name="TotalBitsValue" type="Label" parent="Panel/VBox/GridContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l4alo")
theme_override_font_sizes/font_size = 50
text = "800.0 Bts"
horizontal_alignment = 2
vertical_alignment = 1

[node name="TotalXp" type="Label" parent="Panel/VBox/GridContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l4alo")
theme_override_font_sizes/font_size = 50
text = "TOTAL XP GAINED"
vertical_alignment = 1

[node name="TotalXpValue" type="Label" parent="Panel/VBox/GridContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l4alo")
theme_override_font_sizes/font_size = 50
text = "2,750 XP"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 34.0
offset_top = -132.5
offset_right = -34.0
offset_bottom = -32.5
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_pressed_color = Color(0.11764706, 0.11764706, 0.11764706, 1)
theme_override_fonts/font = ExtResource("2_l4alo")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = ExtResource("3_yl6to")
theme_override_styles/pressed = ExtResource("4_4p1hx")
theme_override_styles/hover = ExtResource("5_cpwfd")
text = "CONTINUE"

[connection signal="pressed" from="Panel/Button" to="." method="_on_continue_pressed"]
